second sec complit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eid gakat</title>
+    <title>Eid jakat</title>
     <link rel="stylesheet" href="./Css/style.css">
 </head>
 <body>
@@ -17,7 +17,28 @@
                     animal noluisse, enim</p>
                     <button class="btn" type="button">Donate Now</button>
         </div>
-
     </section>
+    <!-------frist-scd The end-->
+     <!-------second-scd   state-->
+     <section class="second-sec">
+        <div class="blog-1">
+            <div class="bolog-1text">
+                <h1>Their lives depend on your donation</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br> Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset</p>
+            </div>
+            <div class="video">
+                 <video src="./Video/3169467181.mp4 " controls width="500px"></video>
+            </div>
+        </div>
+        <div class="blog-2">
+            <div class="img">
+                <img src="./img/Rectangle 245.png" alt="">
+            </div>
+            <div class="bolog-2text">
+                <h1>Their lives depend on your donation</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br> Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset</p>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
