--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="bolog-1text">
                 <h1>Their lives depend on your donation</h1>
                 <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br> Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset</p>
+                <button class="btn" type="button">Explore More</button>
             </div>
             <div class="video">
                  <video src="./Video/3169467181.mp4 " controls width="500px"></video>
@@ -37,6 +38,7 @@
             <div class="bolog-2text">
                 <h1>Their lives depend on your donation</h1>
                 <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br> Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset</p>
+                <button class="btn" type="button">Explore More</button>
             </div>
         </div>
      </section>
