third sec complit

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
      <!-------second-scd   state-->
      <section class="second-sec">
         <div class="blog-1">
-            <div class="bolog-1text">
-                <h1>Their lives depend on your donation</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br> Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset</p>
-                <button class="btn" type="button">Explore More</button>
-            </div>
+                <div class="bolog-1text">
+                    <h1>Their lives depend on your donation</h1>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br> Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset</p>
+                    <button class="btn" type="button">Explore More</button>
+                </div>
             <div class="video">
                  <video src="./Video/3169467181.mp4 " controls width="500px"></video>
             </div>
@@ -35,12 +35,65 @@
             <div class="img">
                 <img src="./img/Rectangle 245.png" alt="">
             </div>
-            <div class="bolog-2text">
-                <h1>Their lives depend on your donation</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br> Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset</p>
-                <button class="btn" type="button">Explore More</button>
-            </div>
+                <div class="bolog-2text">
+                    <h1>Their lives depend on your donation</h1>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br> Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset</p>
+                    <button class="btn" type="button">Explore More</button>
+                </div>
         </div>
      </section>
+      <!-------second-scd   The end-->
+      <!-------------third-sec state------>
+      <section class="third-sec">
+        <div class="third-item">
+            <h1>Their lives depend on <br> your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
+        </div>
+        <div class="row1">
+            <div class="card-1">
+                <img class="imgs" src="./img/icon-1.png" alt="">
+                <div class="card-1-text">
+                    <h1>Direct Help</h1>
+                    <p>Lorem ipsum dolor sit amet, usu 
+                        cu esse possit referrentur, at 
+                        eam falli deterruisset. No duo 
+                        populo animal noluisse, enim</p>
+                </div>
+            </div>
+            <div class="card-1">
+                <img class="imgs" src="./img/icon-1.png" alt="">
+                <div class="card-1-text">
+                    <h1>Direct Help</h1>
+                    <p>Lorem ipsum dolor sit amet, usu 
+                        cu esse possit referrentur, at 
+                        eam falli deterruisset. No duo 
+                        populo animal noluisse, enim</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row2">
+            <div class="card-2">
+                <img class="imgs" src="./img/icon.png" alt="">
+                <div class="card-1-text">
+                    <h1>Direct Help</h1>
+                    <p>Lorem ipsum dolor sit amet, usu 
+                        cu esse possit referrentur, at 
+                        eam falli deterruisset. No duo 
+                        populo animal noluisse, enim</p>
+                </div>
+            </div>
+            <div class="card-2">
+                <img class="imgs" src="./img/icon.png" alt="">
+                <div class="card-1-text">
+                    <h1>Direct Help</h1>
+                    <p>Lorem ipsum dolor sit amet, usu 
+                        cu esse possit referrentur, at 
+                        eam falli deterruisset. No duo 
+                        populo animal noluisse, enim</p>
+                </div>
+            </div>
+        </div>
+      </section>
 </body>
 </html>
