--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </section>
     <!-------frist-scd The end-->
-     <!-------second-scd   state-->
+     <!-------second-scd   starte-->
      <section class="second-sec">
         <div class="blog-1">
                 <div class="bolog-1text">
@@ -43,7 +43,7 @@
         </div>
      </section>
       <!-------second-scd   The end-->
-      <!-------------third-sec state------>
+      <!-------------third-sec start------>
       <section class="third-sec">
         <div class="third-item">
             <h1>Their lives depend on <br> your donation</h1>
@@ -93,6 +93,19 @@
                         populo animal noluisse, enim</p>
                 </div>
             </div>
+        </div>
+      </section>
+      <!-------------third-sec the end------>
+      <!----------fourth sec start-->
+      <section class="fourth-sec">
+        <div class="card-lost">
+            <img src="./img/Rectangle 249.png" alt="">
+        </div>
+        <div class="card-lost">
+            <img src="./img/Rectangle 249.png" alt="">
+        </div>
+        <div class="card-lost">
+            <img src="./img/Rectangle 249.png" alt="">
         </div>
       </section>
 </body>
