--- a/index.html
+++ b/index.html
@@ -108,5 +108,54 @@
             <img src="./img/Rectangle 249.png" alt="">
         </div>
       </section>
+      <!----------fourth sec the end-->
+      <!---fifth sec start--->
+      <section class="fifth-sec">
+        <div class="titel-text">
+            <h1>Extend Your Hand of Charity. Earn <br> Rewards for the Hereafter</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="titel-card">
+            <div class="card">
+                <img src="./img/card.png" alt="">
+                <div class="text-box">
+                    <h1>Zakat Fund</h1>
+                    <p>Lorem ipsum dolor sit amet, usu 
+                        cu esse possit referrentur, at eam 
+                        falli deterruisset. No duo populo 
+                        animal noluisse, enim</p>
+                        <button class="btns" type="button">Donate for zakat</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./img/card.png" alt="">
+                <div class="text-box">
+                    <h1>Zakat Fund</h1>
+                    <p>Lorem ipsum dolor sit amet, usu 
+                        cu esse possit referrentur, at eam 
+                        falli deterruisset. No duo populo 
+                        animal noluisse, enim</p>
+                        <button class="btns" type="button">Donate for zakat</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./img/card.png" alt="">
+                <div class="text-box">
+                    <h1>Zakat Fund</h1>
+                    <p>Lorem ipsum dolor sit amet, usu 
+                        cu esse possit referrentur, at eam 
+                        falli deterruisset. No duo populo 
+                        animal noluisse, enim</p>
+                        <button class="btns" type="button">Donate for zakat</button>
+                </div>
+            </div>
+      </section>
+      <section class="futer-sec">
+        <div class="futer-text">
+            <h1>Eid Ul Adha</h1>
+            <p>I’m gonna do it</p>
+        </div>
+      </section>
 </body>
 </html>
